# velvet_nadir

./: run_demo_ui.bat
sw/velvet/: NOTES_MEMPALACE_FUTURE.md  README.md  debug_imports.py  debug_llm.txt  integration_fail.txt  integration_fail_2.txt  list_models.py  manual_test_audio.py  pyproject.toml  quick_import_test.py  regression_results.txt  run_robustness_test.ps1  run_tests.ps1  run_velvet.py  scratch_diagnose.py  test_discovery.py  test_output.txt  test_output_utf8.txt  test_system.py  test_tool_parsing.py
sw/velvet/data/: powermem_dev.db
sw/velvet/quick_test/: velvet.db
sw/velvet/quick_test/vector_db/: chroma.sqlite3
sw/velvet/scripts/: verify_devices.py  verify_discovery.py  verify_google.py  verify_memory.py  verify_mesh.py  verify_registries.py  verify_system.py  verify_velvet.py
sw/velvet/test_data/: velvet.db
sw/velvet/test_data/vector_db/: chroma.sqlite3
sw/velvet/test_data_memory/: velvet.db
sw/velvet/test_data_memory_286a1c13-7868-4d29-87b3-0d39c64f4fea/: velvet.db
sw/velvet/tests/: conftest.py  conftest.py.bak  debug_imports.py  run_shen_tests.py  test_audio.py  test_audio_vision.py  test_config.py  test_discovery.py  test_fabric.py  test_gateway.py  test_hun_agentic.py  test_integration.py  test_jing_integration.py  test_memory.py  test_mesh_integration.py  test_monitors.py  test_network_ops.py  test_phase1_memory.py  test_phase2_xi.py  test_phase3_trust.py  test_phase4_saraswati.py  test_po_reflexes.py  test_polymath.py  test_security.py  test_shen_services.py  test_skill_approval.py  test_smart_llm.py  test_sprint11_cleanup.py  test_sprint12_multinode.py  test_sprint12_security.py  test_sprint13_locus.py  test_sprint13_trust_gate.py  test_sprint13_xiang.py  test_sprint14_basilisk.py  test_tool_parsing.py  test_universal_llm.py  test_vision_pipeline.py  test_xi.py
sw/velvet/velvet/: __init__.py  agents.py  audio.py  basilisk.py  config.py  context.py  devices.py  display.py  display_state.py  drivers.py  entities.py  errors.py  fabric.py  gateway.py  llm.py  main.py  memory.py  mirage.py  models.py  monitors.py  onboarding.py  privacy.py  scan.py  security.py  tool_parsing.py  trust_gate.py
(+137 files in other folders)
